--- a/app/src/main/res/layout/trait_usb_camera.xml
+++ b/app/src/main/res/layout/trait_usb_camera.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/usb_camera_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     android:visibility="gone"
     xmlns:tools="http://schemas.android.com/tools"
@@ -11,64 +11,65 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center_horizontal"
-        android:orientation="vertical">
+        android:layout_height="wrap_content"
+        android:id="@+id/usb_camera_fragment_cv">
 
-        <Button
-            android:layout_margin="8dp"
-            android:id="@+id/trait_usb_camera_devices_btn"
+        <androidx.recyclerview.widget.RecyclerView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="@string/trait_usb_camera_devices_btn_text"
-            app:layout_constraintTop_toTopOf="parent"
+            android:layout_margin="8dp"
+            android:orientation="horizontal"
+            android:minWidth="128dp"
+            android:minHeight="128dp"
+            tools:listitem="@layout/list_item_image"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            android:id="@+id/usb_camera_fragment_rv"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
+
+        <ImageButton
+            android:contentDescription="@string/usb_camera_frag_connect_btn_content_description"
+            android:src="@drawable/ic_connection"
+            android:id="@+id/usb_camera_fragment_connect_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:padding="16dp"
+            app:layout_constraintTop_toBottomOf="@id/usb_camera_fragment_rv"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
+
+        <androidx.constraintlayout.widget.Group
+            android:visibility="invisible"
+            android:id="@+id/usb_camera_fragment_preview_group"
+            app:constraint_referenced_ids="usb_camera_fragment_tv, usb_camera_fragment_capture_btn"
+            android:layout_width="0dp"
+            android:layout_height="0dp"/>
 
         <com.serenegiant.SimpleUVCCameraTextureView
-            android:id="@+id/trait_usb_camera_texture_view"
-            android:layout_margin="16dp"
-            android:layout_width="256dp"
-            android:layout_height="256dp"
-            app:layout_constraintBottom_toTopOf="@id/trait_usb_camera_capture_btn"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <Button
-            android:visibility="invisible"
-            android:layout_margin="8dp"
-            android:id="@+id/trait_usb_camera_capture_btn"
+            android:id="@+id/usb_camera_fragment_tv"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="@string/trait_external_camera_capture_btn"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constrainedHeight="true"
+            app:layout_constraintVertical_bias="0"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/usb_camera_fragment_rv" />
 
         <ImageButton
-            android:visibility="gone"
-            android:padding="16dp"
-            android:background="@color/zxing_transparent"
-            android:src="@drawable/ic_arrow_expand_all"
-            android:id="@+id/trait_usb_camera_expand_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toTopOf="@id/trait_usb_camera_capture_btn"
-            app:layout_constraintEnd_toEndOf="@id/trait_usb_camera_capture_btn"
-            android:contentDescription="@string/trait_external_camera_expand_content_desc" />
-
-        <ImageButton
-            android:visibility="gone"
-            android:padding="16dp"
-            android:background="@color/zxing_transparent"
-            android:src="@drawable/ic_arrow_collapse_all"
-            android:id="@+id/trait_usb_camera_collapse_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toTopOf="@id/trait_usb_camera_capture_btn"
-            app:layout_constraintEnd_toEndOf="@id/trait_usb_camera_capture_btn"
-            android:contentDescription="@string/trait_external_camera_collapse_content_desc" />
+            android:contentDescription="@string/trait_usb_camera_capture_content_description"
+            android:background="@drawable/circle_background"
+            android:id="@+id/usb_camera_fragment_capture_btn"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:layout_margin="8dp"
+            android:padding="8dp"
+            android:text="@string/trait_usb_camera_capture_button_text"
+            app:layout_constraintBottom_toBottomOf="@id/usb_camera_fragment_tv"
+            app:layout_constraintEnd_toEndOf="@id/usb_camera_fragment_tv"
+            app:layout_constraintStart_toStartOf="@id/usb_camera_fragment_tv" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
