--- a/app/src/main/res/xml/preferences_beta.xml
+++ b/app/src/main/res/xml/preferences_beta.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<PreferenceScreen>
-
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
+    <CheckBoxPreference android:key="com.tracker.fieldbook.preferences.keys.repeated_values"
+        android:title="@string/pref_beta_repeated_values_title"
+        android:summary="@string/pref_beta_repeated_values_summary"
+        android:defaultValue="false"
+        android:icon="@drawable/ic_beta"/>
 </PreferenceScreen>
