Initial commit of sync observation code.

--- a/app/src/main/res/menu/menu_field_listitem.xml
+++ b/app/src/main/res/menu/menu_field_listitem.xml
@@ -5,6 +5,9 @@
         android:id="@+id/sort"
         android:title="@string/fields_sort_update" />
     <item
+        android:id="@+id/syncObs"
+        android:title="@string/brapi_obs_sync_menu_name" />
+    <item
         android:id="@+id/delete"
         android:title="@string/fields_delete" />
 
