--- a/app/src/main/res/layout/view_collect_input.xml
+++ b/app/src/main/res/layout/view_collect_input.xml
@@ -1,23 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <View
         android:id="@+id/act_collect_guideline_et_top"
-        android:visibility="invisible"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        app:layout_constraintStart_toStartOf="parent"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        tools:visibility="visible"
-        android:visibility="gone"
         android:id="@+id/view_collect_input_edit_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -30,31 +27,33 @@
         android:textColor="#000000"
         android:textSize="@dimen/text_size_xlarge"
         android:textStyle="bold"
-        tools:text="This is user entered data."
-        app:layout_constraintStart_toStartOf="parent"
+        android:visibility="gone"
+        app:layout_constraintBottom_toTopOf="@id/view_collect_input_repeat_view"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/act_collect_guideline_et_top"
-        app:layout_constraintBottom_toTopOf="@id/view_collect_input_repeat_view" />
+        tools:text="This is user entered data."
+        tools:visibility="visible" />
 
     <com.fieldbook.tracker.views.RepeatedValuesView
-        tools:visibility="visible"
-        android:visibility="gone"
         android:id="@+id/view_collect_input_repeat_view"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@id/act_collect_guideline_et_bottom"
-        app:layout_constraintTop_toBottomOf="@id/view_collect_input_edit_text"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/view_collect_input_edit_text"
+        tools:visibility="visible" />
 
     <View
         android:id="@+id/act_collect_guideline_et_bottom"
-        android:visibility="invisible"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        app:layout_constraintTop_toBottomOf="@id/view_collect_input_repeat_view"
-        app:layout_constraintStart_toStartOf="parent"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/view_collect_input_repeat_view" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
