--- a/app/src/main/res/layout/view_repeated_values.xml
+++ b/app/src/main/res/layout/view_repeated_values.xml
@@ -1,46 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/viewPageController"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <androidx.constraintlayout.widget.Group
+        android:id="@+id/view_repeated_values_group"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/view_repeated_values_group"
         app:constraint_referenced_ids="repeated_values_view_add_btn, repeated_values_view_left_btn,
-            repeated_values_view_pager, repeated_values_view_right_btn"/>
+            repeated_values_view_pager, repeated_values_view_right_btn" />
 
     <Button
         android:id="@+id/repeated_values_view_left_btn"
         android:layout_width="64dp"
         android:layout_height="64dp"
         android:background="@drawable/ic_chevron_left"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/repeated_values_view_pager"
         android:layout_width="0dp"
-        android:layout_height="64dp"
+        android:layout_height="48dp"
+        android:layout_gravity="center"
         android:clipToPadding="false"
+        android:gravity="center"
         android:paddingStart="16dp"
         android:paddingEnd="16dp"
-        app:layout_constraintTop_toTopOf="parent"
+        android:textSize="@dimen/text_size_xlarge"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/repeated_values_view_add_btn"
         app:layout_constraintStart_toEndOf="@id/repeated_values_view_left_btn"
-        app:layout_constraintEnd_toStartOf="@id/repeated_values_view_add_btn" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/repeated_values_view_vertical_gl"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintGuide_percent="0.6"
-        android:id="@+id/repeated_values_view_vertical_gl"/>
+        app:layout_constraintStart_toStartOf="parent" />
 
     <ImageButton
         android:id="@+id/repeated_values_view_add_btn"
@@ -49,6 +52,7 @@
         android:layout_margin="8dp"
         android:adjustViewBounds="false"
         android:background="@drawable/selector_round_button_background"
+        android:contentDescription="@string/view_repeated_values_add_button_content_description"
         android:cropToPadding="false"
         android:elevation="5dp"
         android:fitsSystemWindows="true"
@@ -56,17 +60,16 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_plus"
-        android:contentDescription="@string/view_repeated_values_add_button_content_description" />
+        app:srcCompat="@drawable/ic_plus" />
 
     <Button
-        android:visibility="invisible"
         android:id="@+id/repeated_values_view_right_btn"
         android:layout_width="64dp"
         android:layout_height="64dp"
         android:background="@drawable/ic_chevron_right"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
